@@ -4,15 +4,10 @@
 USE_ORDER="env:conf:auto:defaults"
 GENTOO_MIRRORS="http://www.ibiblio.org/pub/Linux/distributions/gentoo"
 SYNC="rsync://rsync.gentoo.org/gentoo-portage"
-# Host-type
+
 CHOST="powerpc-unknown-linux-gnu"
 
-
-#PORTAGE_TMPDIR=${ROOT}/var/tmp
 PORTAGE_TMPDIR=/var/tmp
-#/var/tmp without ${ROOT} seems more appropriate
-
-# Directory used for the build process 
 BUILD_PREFIX=${PORTAGE_TMPDIR}/portage
 PKG_TMPDIR=${PORTAGE_TMPDIR}/portage-pkg
 
@@ -20,8 +15,6 @@ PORTDIR=/usr/portage
 DISTDIR=${PORTDIR}/distfiles
 PKGDIR=${PORTDIR}/packages
 RPMDIR=${PORTDIR}/rpm
-CURRENTFILE=${PORTDIR}/current-packages
-PLATFORM=$CHOST
 CONFIG_PROTECT="/etc /var/qmail/control /usr/share/config /usr/kde/2/share/config /usr/kde/3/share/config"
 
 # Options passed to make during the build process
@@ -32,7 +25,6 @@ FETCHCOMMAND='/usr/bin/wget -t 5 --passive-ftp ${URI} -P ${DISTDIR}'
 RESUMECOMMAND='/usr/bin/wget -c -t 5 --passive-ftp ${URI} -P ${DISTDIR}'
 
 CFLAGS=" -O2 -pipe -mmultiple -mstring "
-# C++ Compiler flags
 CXXFLAGS=${CFLAGS}
 
 # Debug build -- if defined, binaries won't be stripped
